--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-CLIENT_ID=b96ec116-c0e5-419e-90d7-96447db4e4fc
-CLIENT_SECRET=d2CRwLRLBzXbmpDgO_0e9bDDWCsUXZHDUbB6JQhdY1Q
-REGION=us-west
-USE_MOCK_DATA=false
-MOCK_USER_COUNT=150
-ORGANIZATION=mdacc
+# Genesys Cloud API Credentials
+VITE_GENESYS_CLIENT_ID=c0e5-419e-90d7-96447db4e4fc
+VITE_GENESYS_CLIENT_SECRET=d2CRwLRLBzXbmpDgO_0e9bDDWCsUXZHDUbB6JQhdY1Q
+VITE_GENESYS_ENVIRONMENT=usw2.pure.cloud
+VITE_ORGANIZATION_NAME=mdacc
