--- a/package.json
+++ b/package.json
@@ -1,22 +1,27 @@
 {
-  "name": "genesys-cloud-dashboard",
-  "version": "1.0.0",
-  "description": "Dashboard for Genesys Cloud user and queue data",
-  "main": "server.js",
+  "name": "genesys-cloud-reporting",
+  "private": true,
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
-    "fetch": "node scripts/fetchGenesysData.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.1",
-    "purecloud-platform-client-v2": "^150.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
+    "react-icons": "^4.10.1",
+    "styled-components": "^6.0.4",
+    "purecloud-platform-client-v2": "^173.0.0",
+    "date-fns": "^2.30.0",
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@vitejs/plugin-react": "^4.0.1",
+    "vite": "^4.4.0"
   }
 }
