--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-# Genesys Cloud API Credentials
-VITE_GENESYS_CLIENT_ID=c0e5-419e-90d7-96447db4e4fc
-VITE_GENESYS_CLIENT_SECRET=d2CRwLRLBzXbmpDgO_0e9bDDWCsUXZHDUbB6JQhdY1Q
+VITE_GENESYS_CLIENT_ID=
 VITE_GENESYS_ENVIRONMENT=usw2.pure.cloud
-VITE_ORGANIZATION_NAME=mdacc
