--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "date-fns": "^2.30.0",
+    "purecloud-platform-client-v2": "^173.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
     "react-icons": "^4.10.1",
-    "styled-components": "^6.0.4",
-    "purecloud-platform-client-v2": "^173.0.0",
-    "date-fns": "^2.30.0",
-    "buffer": "^6.0.3"
+    "react-router-dom": "^6.14.1",
+    "styled-components": "^6.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
-    "vite": "^4.4.0"
+    "vite": "^4.4.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   }
 }
